--- a/PyBooklet/resources/PyBooklet.ui
+++ b/PyBooklet/resources/PyBooklet.ui
@@ -2,24 +2,30 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
-    <height>630</height>
+    <width>349</width>
+    <height>578</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>341</width>
-    <height>630</height>
-   </size>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="maximumSize">
    <size>
-    <width>341</width>
-    <height>630</height>
+    <width>349</width>
+    <height>593</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -36,6 +42,18 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="minimumSize">
+    <size>
+     <width>349</width>
+     <height>531</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>349</width>
+     <height>531</height>
+    </size>
+   </property>
    <widget class="QPushButton" name="generate">
     <property name="enabled">
      <bool>true</bool>
@@ -58,13 +76,16 @@
     <property name="text">
      <string>Generate PDFs</string>
     </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>160</y>
-      <width>311</width>
+      <width>313</width>
       <height>132</height>
      </rect>
     </property>
@@ -212,7 +233,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>460</y>
+      <y>480</y>
       <width>311</width>
       <height>16</height>
      </rect>
@@ -231,8 +252,8 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
-      <width>275</width>
+      <y>109</y>
+      <width>282</width>
       <height>27</height>
      </rect>
     </property>
@@ -248,10 +269,10 @@
    <widget class="QPushButton" name="select_file">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>110</y>
-      <width>31</width>
-      <height>28</height>
+      <x>297</x>
+      <y>109</y>
+      <width>37</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="font">
@@ -283,7 +304,7 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="icon">
      <iconset resource="form.qrc">
-      <normaloff>:/resources/images/file.png</normaloff>:/resources/images/file.png</iconset>
+      <normaloff>:/resources/images/dir.png</normaloff>:/resources/images/dir.png</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -323,7 +344,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>440</y>
+      <y>460</y>
       <width>309</width>
       <height>16</height>
      </rect>
@@ -355,7 +376,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>20</x>
       <y>330</y>
-      <width>275</width>
+      <width>285</width>
       <height>27</height>
      </rect>
     </property>
@@ -368,11 +389,17 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="select_directory">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>297</x>
       <y>330</y>
-      <width>31</width>
-      <height>28</height>
+      <width>37</width>
+      <height>27</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="font">
      <font>
@@ -395,8 +422,8 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="iconSize">
      <size>
-      <width>24</width>
-      <height>24</height>
+      <width>31</width>
+      <height>27</height>
      </size>
     </property>
     <property name="default">
@@ -406,37 +433,20 @@ p, li { white-space: pre-wrap; }
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QFrame" name="frame">
-    <property name="geometry">
-     <rect>
-      <x>21</x>
-      <y>532</y>
-      <width>105</width>
-      <height>33</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-image: url(:/resources/images/smalldonate.png);
-background-repeat:no-repeat</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::NoFrame</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <property name="lineWidth">
-     <number>0</number>
-    </property>
-   </widget>
    <widget class="QFrame" name="frame_2">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>-1</y>
-      <width>342</width>
+      <width>349</width>
       <height>73</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(33, 33, 33,245);
@@ -452,7 +462,7 @@ border-color: rgba(255, 255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>251</x>
-       <y>34</y>
+       <y>31</y>
        <width>92</width>
        <height>21</height>
       </rect>
@@ -474,7 +484,7 @@ background-color: rgba(255, 255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>252</x>
-       <y>51</y>
+       <y>48</y>
        <width>81</width>
        <height>20</height>
       </rect>
@@ -496,7 +506,7 @@ background-color: rgba(255, 255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>250</x>
-       <y>4</y>
+       <y>1</y>
        <width>38</width>
        <height>29</height>
       </rect>
@@ -530,14 +540,13 @@ background-color: rgba(255, 255, 255, 0);</string>
    <zorder>label_4</zorder>
    <zorder>selected_directory</zorder>
    <zorder>select_directory</zorder>
-   <zorder>frame</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>341</width>
+     <width>349</width>
      <height>26</height>
     </rect>
    </property>
@@ -569,7 +578,11 @@ border-width:0px</string>
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="sizeGripEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
   <action name="actionBooklet_Help">
    <property name="enabled">
     <bool>false</bool>
